@@ -4148,6 +4148,33 @@ debug_done_generating_core (struct target_ops *self)
   fputs_unfiltered (")\n", gdb_stdlog);
 }
 
+static bool
+delegate_supports_thread_id_operator (struct target_ops *self)
+{
+  self = self->beneath;
+  return self->to_supports_thread_id_operator (self);
+}
+
+static bool
+tdefault_supports_thread_id_operator (struct target_ops *self)
+{
+  return false;
+}
+
+static bool
+debug_supports_thread_id_operator (struct target_ops *self)
+{
+  bool result;
+  fprintf_unfiltered (gdb_stdlog, "-> %s->to_supports_thread_id_operator (...)\n", debug_target.to_shortname);
+  result = debug_target.to_supports_thread_id_operator (&debug_target);
+  fprintf_unfiltered (gdb_stdlog, "<- %s->to_supports_thread_id_operator (", debug_target.to_shortname);
+  target_debug_print_struct_target_ops_p (&debug_target);
+  fputs_unfiltered (") = ", gdb_stdlog);
+  target_debug_print_bool (result);
+  fputs_unfiltered ("\n", gdb_stdlog);
+  return result;
+}
+
 static void
 install_delegators (struct target_ops *ops)
 {
@@ -4459,6 +4486,8 @@ install_delegators (struct target_ops *ops)
     ops->to_prepare_to_generate_core = delegate_prepare_to_generate_core;
   if (ops->to_done_generating_core == NULL)
     ops->to_done_generating_core = delegate_done_generating_core;
+  if (ops->to_supports_thread_id_operator == NULL)
+    ops->to_supports_thread_id_operator = delegate_supports_thread_id_operator;
 }
 
 static void
@@ -4618,6 +4647,7 @@ install_dummy_methods (struct target_ops *ops)
   ops->to_get_tailcall_unwinder = tdefault_get_tailcall_unwinder;
   ops->to_prepare_to_generate_core = tdefault_prepare_to_generate_core;
   ops->to_done_generating_core = tdefault_done_generating_core;
+  ops->to_supports_thread_id_operator = tdefault_supports_thread_id_operator;
 }
 
 static void
@@ -4777,4 +4807,5 @@ init_debug_target (struct target_ops *ops)
   ops->to_get_tailcall_unwinder = debug_get_tailcall_unwinder;
   ops->to_prepare_to_generate_core = debug_prepare_to_generate_core;
   ops->to_done_generating_core = debug_done_generating_core;
+  ops->to_supports_thread_id_operator = debug_supports_thread_id_operator;
 }
